@@ -1,5 +1,6 @@
 Version 1.7 -Eta Carinae-
 
+* [NEW] Added copyrights management system.
 * [NEW] Authentication: Tiki can use the WebServer authentication if admin wants, the
   user is automatically logged to Tiki once the WebServer authentication is used.
 * [NEW] Mechanism to prevent script/robotic user registration is supported, Tiki generates
